<resources>
    <string name="app_name">Dynamical System Simulator</string>
    <string-array name="colors">
        <item>Yellow/Orange</item>
        <item>Teal/Azure</item>
        <item>Magenta/Pink</item>
    </string-array>
    <string name="help">
<![CDATA[
<h2 style="text-align : center">Dynamical System Simulator</h2>
<p>This application simulates 2D and 3D first-order and second-order systems of differential equations in real time. Several sample systems can be found under the navigation drawer in the top left. The application works by randomly generating particles with uniform distribution within a 1x1x1 volume for 3D mode or a 1x1 to 20x20 area for 2D mode (depending on the current zoom distance). Particle positions are updated using an Euler Method numerical approximation of the system. As a particle moves it leaves a short trail in its wake to show its previous positions and relative velocity. When a particle gets too far from the boundary area or its duration elapses it is regenerated.</p>
<h4>Background</h4>
<p>Autonomous and non-autonomous first/second-order systems of <a href=\"http://en.wikipedia.org/wiki/Differential_equation\">differential equations</a> are a subset of <a href=\"http://en.wikipedia.org/wiki/Dynamical_system\">dynamical systems</a>. <a href=\"http://en.wikipedia.org/wiki/Autonomous_system_(mathematics)\">Autonomous</a> means the equations do not explicitly depend on the independent variable, in this case time. These are also referred to as <a href=\"http://en.wikipedia.org/wiki/Time-invariant_system\">time-invariant systems</a>. <a href=\"http://en.wikipedia.org/wiki/Autonomous_system_(mathematics)#First_order\">First order</a> means the system only involves variables and their first derivatives.</p>
<p>The <a href=\"http://en.wikipedia.org/wiki/Euler_method\">Euler Method</a> numerical approximation used to update a particle\'s position works by iteratively computing the differential equation functions using the particle\'s current position. The computed value is multiplied by a finite &#916;T (change in time) to determine a discrete &#916;X, &#916;Y, and &#916;Z for the particle for that iteration.</p>
<h4>Using The Application</h4>
<h5>Navigation Drawer (top left)</h5>
<p>The navigation drawer allows you to view a few common, well-studied systems.</p>
<h5>Menu Items (top right)</h5>
<p><b>Settings</b> - Toggles the system/simulation parameters window.</p>
<p><b>Save</b> - Saves the current configuration. This includes system and simulation parameters.</p>
<p><b>Save</b> - Loads a saved configuration.</p>
<p><b>Delete</b> - Deletes a saved configuration.</p>
<p><b>Info</b> - Shows this window.</p>
<h5>Settings Window</h5>
<p>The settings window can be shown or hidden with the Settings menu button. The following settings are provided.</p>
<p><b>Particles</b> - The number of particles. Can be 0-500.</p>
<p><b>Particle Duration (S)</b> - The amount of time a particle moves around before it is regenerated, in seconds. Can be 1-10.</p>
<p><b>Line Width</b> - How thick the particle trails and axes appear. The valid range will vary depending on your device supports.</p>
<p><b>Updates/Second</b> - The frequency with which particle positions are updated. Increasing this setting improves the accuracy of the numerical approximation. Can be 1-1000.</p>
<p><b>Time Scale</b> - Speeds up or slows down all aspects of the simulation excluding update rate. Can be any real number.</p>
<p><b>Mode Selection</b> - Sets the mode to either Matrix or Expression.
<p><b>Dimensions Selection</b> - Sets the dimensions to 2D or 3D.
<p><b>Order Selection</b> - Sets the system to first or second order.
<p><b>Differential Equation Definition Settings</b> - A collection of text boxes that define the differential equations. The X, Y and Z labels are color coded to match the axis colors in the simulation window.  In <b>Matrix</b> mode the differential equations become linear. Values specified in the text boxes are the scalar coefficients of the X, Y, and Z variable (and X\', Y\', Z\' in 2nd order mode). In <b>Expression</b> mode arbitrary expressions involving X, Y, Z, X\', Y\', Z\' and T may be specified using any of the following symbols or functions: x y z x\' y\' z\' t + - * / ^ . ( ) [0-9] cos sin acos asin abs.</p>
<p><b>Defaults</b> - Sets the simulation parameters to their defaults. This does not effect the system parameters.</p>
<p><b>Randomize</b> - Randomizes the differential equation definition settings. When a system type has been selected from the navigation drawer this will randomize the parameters of the particular system type.</p>
<h5>Simulation Window</h5>
<p>The simulation window renders axes, particles, and particle trails. Axes are color coded to match the text color in the Settings window. In 3D mode the view orientation can be changed by sliding one finger around the view. The view can be zoomed in or out using a \"pinch\" gesture with two fingers in either mode.</p>
]]>
    </string>
    <string name="example_systems">Example Systems</string>
    <string name="ERROR">ERROR</string>
    <string name="OK">OK</string>
    <string name="matrix">Matrix</string>
    <string name="expressions">Expressions</string>
    <string name="mode">Mode:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="_2d">2D</string>
    <string name="_3d">3D</string>
    <string name="order">Order:</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="x">X</string>
    <string name="apostrophe_equals">"'="</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="back">Back</string>
    <string name="apostrophe_plus">"'+"</string>
    <string name="apostrophe">"'"</string>
    <string name="space_space_plus_space">+</string>
    <string name="_1_0">1.0</string>
    <string name="colors_">Colors:</string>
    <string name="particle_duration_s_">Particle Duration (S):</string>
    <string name="_5_0">5.0</string>
    <string name="updates_second_">Updates/Second:</string>
    <string name="_60">60</string>
    <string name="time_scale_">Time Scale:</string>
    <string name="line_width_">Line Width:</string>
    <string name="_100">100</string>
    <string name="default_settings">Default Settings</string>
    <string name="particles_">Particles:</string>
    <string name="randomize_initial_velocities">Randomize Initial Velocities</string>
    <string name="reset_t">Reset t</string>
    <string name="reset_particles">Reset Particles</string>
    <string name="randomize_parameters">Randomize Parameters</string>
    <string name="apostrophe_space_equals_space">"' ="</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="defaults_button_description">Sets all settings to their default values.</string>
    <string name="randomize_button_description">Randomizes the system definition settings.</string>
    <string name="reset_time_button_description">Resets elapsed time to 0 (for the t variable).</string>
    <string name="reset_particles_button_description">Resets all particles.</string>
    <string name="apostrophe_apostrophe_equals">\'\'=</string>
    <string name="invalid_syntax_">Invalid Syntax.</string>
    <string name="invalid_format_">Invalid Format.</string>
    <string name="valid_range_1_10">Valid range: 1.0 – 10.0</string>
    <string name="valid_range_1_1000">Valid range: 1 – 1000</string>
    <string name="valid_range_">\"Valid range: \"</string>
    <string name="valid_range_0_">\"Valid range: 0 - \"</string>
    <string name="unexpected_exception_">Unexpected exception:</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="load_configuration">Load Configuration</string>
    <string name="cancel">Cancel</string>
    <string name="delete_configuration">Delete Configuration</string>
</resources>